--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,9 @@
 scapy==2.5.0
 pyshark==0.4.6
 python-pcapng==0.1.0
+pandas==2.2.2
+numpy==1.26.4
+scikit-learn==1.5.2
+joblib==1.4.2
+termcolor==2.4.0
+xgboost==2.1.2
