--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,10 @@
+fastapi==0.95.2
+uvicorn[standard]==0.22.0
+SQLAlchemy==1.4.49
+passlib[bcrypt]==1.7.4
+python-jose==3.3.0
+python-multipart==0.0.6
+PyJWT==2.8.0
 scapy==2.5.0
 pyshark==0.4.6
 python-pcapng==0.1.0
